CCLayerTreeHostImpl calls didDraw more frequently than willDraw https://bugs.webkit.org/show_bug.cgi?id=79139

Patch by Tim Dresser <tdresser@chromium.org> on 2012-02-22
Reviewed by James Robinson.

Source/WebCore:

Ensure that didDraw is called if and only if willDraw was called previously.

CCLayerTreeHostImplTest.didDrawNotCalledOnHiddenLayer has been added to ensure that
hidden layers, for which willDraw is not called, will also not have didDraw called.

* platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
(WebCore::CCLayerTreeHostImpl::drawLayers):
* platform/graphics/chromium/cc/CCVideoLayerImpl.cpp:
(WebCore::CCVideoLayerImpl::didDraw):

Source/WebKit/chromium:

* tests/CCLayerTreeHostImplTest.cpp:
(WebKit::DidDrawCheckLayer::willDraw):
(DidDrawCheckLayer):
(WebKit::DidDrawCheckLayer::willDrawCalled):
(WebKit::DidDrawCheckLayer::DidDrawCheckLayer):
(WebKit::TEST_F):
(WebKit):

Canonical link: https://commits.webkit.org/96335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108542 268f45cc-cd09-0410-ab3c-d52691b4dbfc